parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> OPEN declaracion CLOSE
Rule 2     programa -> OPEN declaracion
Rule 3     programa -> declaracion CLOSE
Rule 4     programa -> declaracion
Rule 5     programa -> CLOSE
Rule 6     programa -> OPEN
Rule 7     declaracion -> expression
Rule 8     declaracion -> expif
Rule 9     declaracion -> expelse
Rule 10    declaracion -> expresionlogica
Rule 11    declaracion -> declararvariable
Rule 12    declaracion -> creacionfunciones
Rule 13    declaracion -> returnvalores
Rule 14    declaracion -> operador_object
Rule 15    declaracion -> print
Rule 16    declaracion -> arreglos
Rule 17    declaracion -> while
Rule 18    declaracion -> foreach
Rule 19    declaracion -> clase
Rule 20    declaracion -> declaracion
Rule 21    creacionfunciones -> FUNCTION FNOMBRE LPAREN RPAREN LCORCHET declaracion RCORCHET
Rule 22    empty -> <empty>
Rule 23    argumentos -> ID
Rule 24    argumentos -> empty
Rule 25    returnvalores -> RETURN termino END
Rule 26    returnvalores -> RETURN creacionfunciones
Rule 27    returnvalores -> empty
Rule 28    expression -> ID EQUALS operacion_matematica END
Rule 29    operacion_matematica -> termino operadores operacion_matematica
Rule 30    operacion_matematica -> termino operadores termino
Rule 31    operadores -> PLUS
Rule 32    operadores -> MINUS
Rule 33    operadores -> DIVIDE
Rule 34    operadores -> TIMES
Rule 35    operadores -> MODULO
Rule 36    termino -> NUMBER
Rule 37    termino -> ID
Rule 38    termino -> DECIMAL
Rule 39    expif -> funcion_condicion LPAREN comparacion RPAREN LCORCHET declaracion RCORCHET
Rule 40    expelse -> expif ELSE LCORCHET declaracion RCORCHET
Rule 41    funcion_condicion -> IF
Rule 42    funcion_condicion -> ELSEIF
Rule 43    control_bucle -> BREAK
Rule 44    control_bucle -> CONTINUE
Rule 45    control_bucle -> declaracion
Rule 46    while -> WHILE LPAREN comparacion RPAREN LCORCHET control_bucle RCORCHET
Rule 47    foreach -> FOREACH LPAREN ID AS ID RPAREN LCORCHET control_bucle RCORCHET
Rule 48    comparacion -> termino operadorcomparacion termino
Rule 49    operadorcomparacion -> IS_EQUAL
Rule 50    operadorcomparacion -> IS_IDENTICAL
Rule 51    operadorcomparacion -> IS_NOT_EQUAL
Rule 52    operadorcomparacion -> IS_NOT_IDENTICAL
Rule 53    operadorcomparacion -> IS_GREATER_OR_EQUAL
Rule 54    operadorcomparacion -> IS_SMALLER_OR_EQUAL
Rule 55    operadorcomparacion -> SPACESHIP
Rule 56    operadorcomparacion -> MAYORQUE
Rule 57    operadorcomparacion -> MENORQUE
Rule 58    expresionlogica -> ID operadorlogico ID
Rule 59    operadorlogico -> AND
Rule 60    operadorlogico -> OR
Rule 61    operadorlogico -> XOR
Rule 62    operadorlogico -> NOT
Rule 63    declararvariable -> ID EQUALS tipo END
Rule 64    tipo -> boolean
Rule 65    tipo -> NUMBER
Rule 66    tipo -> TEXT
Rule 67    tipo -> NULL
Rule 68    tipo -> archivos
Rule 69    tipo -> array
Rule 70    tipo -> new
Rule 71    boolean -> TRUE
Rule 72    boolean -> FALSE
Rule 73    operador_object -> ID EQUALS OBJECT_OPERATOR FNOMBRE LPAREN argumentos RPAREN END
Rule 74    array -> ARRAY LPAREN valores_array RPAREN
Rule 75    valores_array -> elementos_array COMA valores_array
Rule 76    valores_array -> elementos_array
Rule 77    valores_array -> empty
Rule 78    elementos_array -> NUMBER
Rule 79    elementos_array -> TEXT
Rule 80    elementos_array -> empty
Rule 81    elementos_array -> boolean
Rule 82    elementos_array -> array
Rule 83    new -> NEW FNOMBRE
Rule 84    print -> funcion_print LPAREN argument RPAREN END
Rule 85    argument -> ID
Rule 86    argument -> TEXT
Rule 87    funcion_print -> VAR_EXPORT
Rule 88    funcion_print -> ECHO
Rule 89    funcion_print -> PRINT
Rule 90    funcion_print -> PRINT_R
Rule 91    funcion_print -> VAR_DUMP
Rule 92    arreglos -> funcion_arreglo LPAREN ID RPAREN
Rule 93    funcion_arreglo -> SUFFLE
Rule 94    funcion_arreglo -> ARRAY_MERGE
Rule 95    funcion_arreglo -> ARRAY_SEARCH
Rule 96    funcion_arreglo -> ARRAY_RAND
Rule 97    funcion_arreglo -> ARRAY_CHUNK
Rule 98    funcion_arreglo -> STR_SPLIT
Rule 99    funcion_arreglo -> PREG_SPLIT
Rule 100   funcion_arreglo -> ARRAY_UNIQUE
Rule 101   funcion_arreglo -> COUNT
Rule 102   funcion_arreglo -> SIZEOF
Rule 103   funcion_arreglo -> ARRAY_PUSH
Rule 104   funcion_arreglo -> SORT
Rule 105   funcion_arreglo -> ASORT
Rule 106   funcion_arreglo -> KSORT
Rule 107   funcion_arreglo -> UNSET
Rule 108   funcion_arreglo -> IMPLODE
Rule 109   funcion_arreglo -> EXPLODE
Rule 110   archivos -> funcion_archivo LPAREN TEXT COMA TEXT RPAREN
Rule 111   funcion_archivo -> FGETS
Rule 112   funcion_archivo -> FREAD
Rule 113   funcion_archivo -> FSCANF
Rule 114   funcion_archivo -> FPASSTHRU
Rule 115   funcion_archivo -> FGETCSV
Rule 116   funcion_archivo -> FGETC
Rule 117   funcion_archivo -> FILE_GET_CONTENTS
Rule 118   funcion_archivo -> READFILE
Rule 119   funcion_archivo -> FILE
Rule 120   funcion_archivo -> PARSE_INI_FILE
Rule 121   clase -> CLASS FNOMBRE LCORCHET declaracion RCORCHET

Terminals, with rules where they appear

AND                  : 59
ARRAY                : 74
ARRAY_CHUNK          : 97
ARRAY_MERGE          : 94
ARRAY_PUSH           : 103
ARRAY_RAND           : 96
ARRAY_SEARCH         : 95
ARRAY_UNIQUE         : 100
AS                   : 47
ASORT                : 105
BREAK                : 43
CLASS                : 121
CLOSE                : 1 3 5
COMA                 : 75 110
CONTINUE             : 44
COUNT                : 101
DECIMAL              : 38
DIVIDE               : 33
ECHO                 : 88
ELSE                 : 40
ELSEIF               : 42
END                  : 25 28 63 73 84
EQUALS               : 28 63 73
EXPLODE              : 109
FALSE                : 72
FGETC                : 116
FGETCSV              : 115
FGETS                : 111
FILE                 : 119
FILE_GET_CONTENTS    : 117
FNOMBRE              : 21 73 83 121
FOREACH              : 47
FPASSTHRU            : 114
FREAD                : 112
FSCANF               : 113
FUNCTION             : 21
ID                   : 23 28 37 47 47 58 58 63 73 85 92
IF                   : 41
IMPLODE              : 108
IS_EQUAL             : 49
IS_GREATER_OR_EQUAL  : 53
IS_IDENTICAL         : 50
IS_NOT_EQUAL         : 51
IS_NOT_IDENTICAL     : 52
IS_SMALLER_OR_EQUAL  : 54
KSORT                : 106
LCORCHET             : 21 39 40 46 47 121
LPAREN               : 21 39 46 47 73 74 84 92 110
MAYORQUE             : 56
MENORQUE             : 57
MINUS                : 32
MODULO               : 35
NEW                  : 83
NOT                  : 62
NULL                 : 67
NUMBER               : 36 65 78
OBJECT_OPERATOR      : 73
OPEN                 : 1 2 6
OR                   : 60
PARSE_INI_FILE       : 120
PLUS                 : 31
PREG_SPLIT           : 99
PRINT                : 89
PRINT_R              : 90
RCORCHET             : 21 39 40 46 47 121
READFILE             : 118
RETURN               : 25 26
RPAREN               : 21 39 46 47 73 74 84 92 110
SIZEOF               : 102
SORT                 : 104
SPACESHIP            : 55
STR_SPLIT            : 98
SUFFLE               : 93
TEXT                 : 66 79 86 110 110
TIMES                : 34
TRUE                 : 71
UNSET                : 107
VAR_DUMP             : 91
VAR_EXPORT           : 87
WHILE                : 46
XOR                  : 61
error                : 

Nonterminals, with rules where they appear

archivos             : 68
argument             : 84
argumentos           : 73
array                : 69 82
arreglos             : 16
boolean              : 64 81
clase                : 19
comparacion          : 39 46
control_bucle        : 46 47
creacionfunciones    : 12 26
declaracion          : 1 2 3 4 20 21 39 40 45 121
declararvariable     : 11
elementos_array      : 75 76
empty                : 24 27 77 80
expelse              : 9
expif                : 8 40
expresionlogica      : 10
expression           : 7
foreach              : 18
funcion_archivo      : 110
funcion_arreglo      : 92
funcion_condicion    : 39
funcion_print        : 84
new                  : 70
operacion_matematica : 28 29
operador_object      : 14
operadorcomparacion  : 48
operadores           : 29 30
operadorlogico       : 58
print                : 15
programa             : 0
returnvalores        : 13
termino              : 25 29 30 30 48 48
tipo                 : 63
valores_array        : 74 75
while                : 17

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . OPEN declaracion CLOSE
    (2) programa -> . OPEN declaracion
    (3) programa -> . declaracion CLOSE
    (4) programa -> . declaracion
    (5) programa -> . CLOSE
    (6) programa -> . OPEN
    (7) declaracion -> . expression
    (8) declaracion -> . expif
    (9) declaracion -> . expelse
    (10) declaracion -> . expresionlogica
    (11) declaracion -> . declararvariable
    (12) declaracion -> . creacionfunciones
    (13) declaracion -> . returnvalores
    (14) declaracion -> . operador_object
    (15) declaracion -> . print
    (16) declaracion -> . arreglos
    (17) declaracion -> . while
    (18) declaracion -> . foreach
    (19) declaracion -> . clase
    (20) declaracion -> . declaracion
    (28) expression -> . ID EQUALS operacion_matematica END
    (39) expif -> . funcion_condicion LPAREN comparacion RPAREN LCORCHET declaracion RCORCHET
    (40) expelse -> . expif ELSE LCORCHET declaracion RCORCHET
    (58) expresionlogica -> . ID operadorlogico ID
    (63) declararvariable -> . ID EQUALS tipo END
    (21) creacionfunciones -> . FUNCTION FNOMBRE LPAREN RPAREN LCORCHET declaracion RCORCHET
    (25) returnvalores -> . RETURN termino END
    (26) returnvalores -> . RETURN creacionfunciones
    (27) returnvalores -> . empty
    (73) operador_object -> . ID EQUALS OBJECT_OPERATOR FNOMBRE LPAREN argumentos RPAREN END
    (84) print -> . funcion_print LPAREN argument RPAREN END
    (92) arreglos -> . funcion_arreglo LPAREN ID RPAREN
    (46) while -> . WHILE LPAREN comparacion RPAREN LCORCHET control_bucle RCORCHET
    (47) foreach -> . FOREACH LPAREN ID AS ID RPAREN LCORCHET control_bucle RCORCHET
    (121) clase -> . CLASS FNOMBRE LCORCHET declaracion RCORCHET
    (41) funcion_condicion -> . IF
    (42) funcion_condicion -> . ELSEIF
    (22) empty -> .
    (87) funcion_print -> . VAR_EXPORT
    (88) funcion_print -> . ECHO
    (89) funcion_print -> . PRINT
    (90) funcion_print -> . PRINT_R
    (91) funcion_print -> . VAR_DUMP
    (93) funcion_arreglo -> . SUFFLE
    (94) funcion_arreglo -> . ARRAY_MERGE
    (95) funcion_arreglo -> . ARRAY_SEARCH
    (96) funcion_arreglo -> . ARRAY_RAND
    (97) funcion_arreglo -> . ARRAY_CHUNK
    (98) funcion_arreglo -> . STR_SPLIT
    (99) funcion_arreglo -> . PREG_SPLIT
    (100) funcion_arreglo -> . ARRAY_UNIQUE
    (101) funcion_arreglo -> . COUNT
    (102) funcion_arreglo -> . SIZEOF
    (103) funcion_arreglo -> . ARRAY_PUSH
    (104) funcion_arreglo -> . SORT
    (105) funcion_arreglo -> . ASORT
    (106) funcion_arreglo -> . KSORT
    (107) funcion_arreglo -> . UNSET
    (108) funcion_arreglo -> . IMPLODE
    (109) funcion_arreglo -> . EXPLODE

  ! shift/reduce conflict for CLOSE resolved as shift
    OPEN            shift and go to state 2
    CLOSE           shift and go to state 4
    ID              shift and go to state 18
    FUNCTION        shift and go to state 20
    RETURN          shift and go to state 21
    WHILE           shift and go to state 25
    FOREACH         shift and go to state 26
    CLASS           shift and go to state 27
    IF              shift and go to state 28
    ELSEIF          shift and go to state 29
    $end            reduce using rule 22 (empty -> .)
    VAR_EXPORT      shift and go to state 30
    ECHO            shift and go to state 31
    PRINT           shift and go to state 32
    PRINT_R         shift and go to state 33
    VAR_DUMP        shift and go to state 34
    SUFFLE          shift and go to state 35
    ARRAY_MERGE     shift and go to state 36
    ARRAY_SEARCH    shift and go to state 37
    ARRAY_RAND      shift and go to state 38
    ARRAY_CHUNK     shift and go to state 39
    STR_SPLIT       shift and go to state 40
    PREG_SPLIT      shift and go to state 41
    ARRAY_UNIQUE    shift and go to state 42
    COUNT           shift and go to state 43
    SIZEOF          shift and go to state 44
    ARRAY_PUSH      shift and go to state 45
    SORT            shift and go to state 46
    ASORT           shift and go to state 47
    KSORT           shift and go to state 48
    UNSET           shift and go to state 49
    IMPLODE         shift and go to state 50
    EXPLODE         shift and go to state 51

  ! CLOSE           [ reduce using rule 22 (empty -> .) ]

    programa                       shift and go to state 1
    declaracion                    shift and go to state 3
    expression                     shift and go to state 5
    expif                          shift and go to state 6
    expelse                        shift and go to state 7
    expresionlogica                shift and go to state 8
    declararvariable               shift and go to state 9
    creacionfunciones              shift and go to state 10
    returnvalores                  shift and go to state 11
    operador_object                shift and go to state 12
    print                          shift and go to state 13
    arreglos                       shift and go to state 14
    while                          shift and go to state 15
    foreach                        shift and go to state 16
    clase                          shift and go to state 17
    funcion_condicion              shift and go to state 19
    empty                          shift and go to state 22
    funcion_print                  shift and go to state 23
    funcion_arreglo                shift and go to state 24

state 1

    (0) S' -> programa .



state 2

    (1) programa -> OPEN . declaracion CLOSE
    (2) programa -> OPEN . declaracion
    (6) programa -> OPEN .
    (7) declaracion -> . expression
    (8) declaracion -> . expif
    (9) declaracion -> . expelse
    (10) declaracion -> . expresionlogica
    (11) declaracion -> . declararvariable
    (12) declaracion -> . creacionfunciones
    (13) declaracion -> . returnvalores
    (14) declaracion -> . operador_object
    (15) declaracion -> . print
    (16) declaracion -> . arreglos
    (17) declaracion -> . while
    (18) declaracion -> . foreach
    (19) declaracion -> . clase
    (20) declaracion -> . declaracion
    (28) expression -> . ID EQUALS operacion_matematica END
    (39) expif -> . funcion_condicion LPAREN comparacion RPAREN LCORCHET declaracion RCORCHET
    (40) expelse -> . expif ELSE LCORCHET declaracion RCORCHET
    (58) expresionlogica -> . ID operadorlogico ID
    (63) declararvariable -> . ID EQUALS tipo END
    (21) creacionfunciones -> . FUNCTION FNOMBRE LPAREN RPAREN LCORCHET declaracion RCORCHET
    (25) returnvalores -> . RETURN termino END
    (26) returnvalores -> . RETURN creacionfunciones
    (27) returnvalores -> . empty
    (73) operador_object -> . ID EQUALS OBJECT_OPERATOR FNOMBRE LPAREN argumentos RPAREN END
    (84) print -> . funcion_print LPAREN argument RPAREN END
    (92) arreglos -> . funcion_arreglo LPAREN ID RPAREN
    (46) while -> . WHILE LPAREN comparacion RPAREN LCORCHET control_bucle RCORCHET
    (47) foreach -> . FOREACH LPAREN ID AS ID RPAREN LCORCHET control_bucle RCORCHET
    (121) clase -> . CLASS FNOMBRE LCORCHET declaracion RCORCHET
    (41) funcion_condicion -> . IF
    (42) funcion_condicion -> . ELSEIF
    (22) empty -> .
    (87) funcion_print -> . VAR_EXPORT
    (88) funcion_print -> . ECHO
    (89) funcion_print -> . PRINT
    (90) funcion_print -> . PRINT_R
    (91) funcion_print -> . VAR_DUMP
    (93) funcion_arreglo -> . SUFFLE
    (94) funcion_arreglo -> . ARRAY_MERGE
    (95) funcion_arreglo -> . ARRAY_SEARCH
    (96) funcion_arreglo -> . ARRAY_RAND
    (97) funcion_arreglo -> . ARRAY_CHUNK
    (98) funcion_arreglo -> . STR_SPLIT
    (99) funcion_arreglo -> . PREG_SPLIT
    (100) funcion_arreglo -> . ARRAY_UNIQUE
    (101) funcion_arreglo -> . COUNT
    (102) funcion_arreglo -> . SIZEOF
    (103) funcion_arreglo -> . ARRAY_PUSH
    (104) funcion_arreglo -> . SORT
    (105) funcion_arreglo -> . ASORT
    (106) funcion_arreglo -> . KSORT
    (107) funcion_arreglo -> . UNSET
    (108) funcion_arreglo -> . IMPLODE
    (109) funcion_arreglo -> . EXPLODE

  ! reduce/reduce conflict for $end resolved using rule 6 (programa -> OPEN .)
    $end            reduce using rule 6 (programa -> OPEN .)
    ID              shift and go to state 18
    FUNCTION        shift and go to state 20
    RETURN          shift and go to state 21
    WHILE           shift and go to state 25
    FOREACH         shift and go to state 26
    CLASS           shift and go to state 27
    IF              shift and go to state 28
    ELSEIF          shift and go to state 29
    CLOSE           reduce using rule 22 (empty -> .)
    VAR_EXPORT      shift and go to state 30
    ECHO            shift and go to state 31
    PRINT           shift and go to state 32
    PRINT_R         shift and go to state 33
    VAR_DUMP        shift and go to state 34
    SUFFLE          shift and go to state 35
    ARRAY_MERGE     shift and go to state 36
    ARRAY_SEARCH    shift and go to state 37
    ARRAY_RAND      shift and go to state 38
    ARRAY_CHUNK     shift and go to state 39
    STR_SPLIT       shift and go to state 40
    PREG_SPLIT      shift and go to state 41
    ARRAY_UNIQUE    shift and go to state 42
    COUNT           shift and go to state 43
    SIZEOF          shift and go to state 44
    ARRAY_PUSH      shift and go to state 45
    SORT            shift and go to state 46
    ASORT           shift and go to state 47
    KSORT           shift and go to state 48
    UNSET           shift and go to state 49
    IMPLODE         shift and go to state 50
    EXPLODE         shift and go to state 51

  ! $end            [ reduce using rule 22 (empty -> .) ]

    declaracion                    shift and go to state 52
    expression                     shift and go to state 5
    expif                          shift and go to state 6
    expelse                        shift and go to state 7
    expresionlogica                shift and go to state 8
    declararvariable               shift and go to state 9
    creacionfunciones              shift and go to state 10
    returnvalores                  shift and go to state 11
    operador_object                shift and go to state 12
    print                          shift and go to state 13
    arreglos                       shift and go to state 14
    while                          shift and go to state 15
    foreach                        shift and go to state 16
    clase                          shift and go to state 17
    funcion_condicion              shift and go to state 19
    empty                          shift and go to state 22
    funcion_print                  shift and go to state 23
    funcion_arreglo                shift and go to state 24

state 3

    (3) programa -> declaracion . CLOSE
    (4) programa -> declaracion .
    (20) declaracion -> declaracion .

  ! shift/reduce conflict for CLOSE resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 4 (programa -> declaracion .)
    CLOSE           shift and go to state 53
    $end            reduce using rule 4 (programa -> declaracion .)

  ! CLOSE           [ reduce using rule 20 (declaracion -> declaracion .) ]
  ! $end            [ reduce using rule 20 (declaracion -> declaracion .) ]


state 4

    (5) programa -> CLOSE .

    $end            reduce using rule 5 (programa -> CLOSE .)


state 5

    (7) declaracion -> expression .

    CLOSE           reduce using rule 7 (declaracion -> expression .)
    $end            reduce using rule 7 (declaracion -> expression .)
    RCORCHET        reduce using rule 7 (declaracion -> expression .)


state 6

    (8) declaracion -> expif .
    (40) expelse -> expif . ELSE LCORCHET declaracion RCORCHET

    CLOSE           reduce using rule 8 (declaracion -> expif .)
    $end            reduce using rule 8 (declaracion -> expif .)
    RCORCHET        reduce using rule 8 (declaracion -> expif .)
    ELSE            shift and go to state 54


state 7

    (9) declaracion -> expelse .

    CLOSE           reduce using rule 9 (declaracion -> expelse .)
    $end            reduce using rule 9 (declaracion -> expelse .)
    RCORCHET        reduce using rule 9 (declaracion -> expelse .)


state 8

    (10) declaracion -> expresionlogica .

    CLOSE           reduce using rule 10 (declaracion -> expresionlogica .)
    $end            reduce using rule 10 (declaracion -> expresionlogica .)
    RCORCHET        reduce using rule 10 (declaracion -> expresionlogica .)


state 9

    (11) declaracion -> declararvariable .

    CLOSE           reduce using rule 11 (declaracion -> declararvariable .)
    $end            reduce using rule 11 (declaracion -> declararvariable .)
    RCORCHET        reduce using rule 11 (declaracion -> declararvariable .)


state 10

    (12) declaracion -> creacionfunciones .

    CLOSE           reduce using rule 12 (declaracion -> creacionfunciones .)
    $end            reduce using rule 12 (declaracion -> creacionfunciones .)
    RCORCHET        reduce using rule 12 (declaracion -> creacionfunciones .)


state 11

    (13) declaracion -> returnvalores .

    CLOSE           reduce using rule 13 (declaracion -> returnvalores .)
    $end            reduce using rule 13 (declaracion -> returnvalores .)
    RCORCHET        reduce using rule 13 (declaracion -> returnvalores .)


state 12

    (14) declaracion -> operador_object .

    CLOSE           reduce using rule 14 (declaracion -> operador_object .)
    $end            reduce using rule 14 (declaracion -> operador_object .)
    RCORCHET        reduce using rule 14 (declaracion -> operador_object .)


state 13

    (15) declaracion -> print .

    CLOSE           reduce using rule 15 (declaracion -> print .)
    $end            reduce using rule 15 (declaracion -> print .)
    RCORCHET        reduce using rule 15 (declaracion -> print .)


state 14

    (16) declaracion -> arreglos .

    CLOSE           reduce using rule 16 (declaracion -> arreglos .)
    $end            reduce using rule 16 (declaracion -> arreglos .)
    RCORCHET        reduce using rule 16 (declaracion -> arreglos .)


state 15

    (17) declaracion -> while .

    CLOSE           reduce using rule 17 (declaracion -> while .)
    $end            reduce using rule 17 (declaracion -> while .)
    RCORCHET        reduce using rule 17 (declaracion -> while .)


state 16

    (18) declaracion -> foreach .

    CLOSE           reduce using rule 18 (declaracion -> foreach .)
    $end            reduce using rule 18 (declaracion -> foreach .)
    RCORCHET        reduce using rule 18 (declaracion -> foreach .)


state 17

    (19) declaracion -> clase .

    CLOSE           reduce using rule 19 (declaracion -> clase .)
    $end            reduce using rule 19 (declaracion -> clase .)
    RCORCHET        reduce using rule 19 (declaracion -> clase .)


state 18

    (28) expression -> ID . EQUALS operacion_matematica END
    (58) expresionlogica -> ID . operadorlogico ID
    (63) declararvariable -> ID . EQUALS tipo END
    (73) operador_object -> ID . EQUALS OBJECT_OPERATOR FNOMBRE LPAREN argumentos RPAREN END
    (59) operadorlogico -> . AND
    (60) operadorlogico -> . OR
    (61) operadorlogico -> . XOR
    (62) operadorlogico -> . NOT

    EQUALS          shift and go to state 55
    AND             shift and go to state 57
    OR              shift and go to state 58
    XOR             shift and go to state 59
    NOT             shift and go to state 60

    operadorlogico                 shift and go to state 56

state 19

    (39) expif -> funcion_condicion . LPAREN comparacion RPAREN LCORCHET declaracion RCORCHET

    LPAREN          shift and go to state 61


state 20

    (21) creacionfunciones -> FUNCTION . FNOMBRE LPAREN RPAREN LCORCHET declaracion RCORCHET

    FNOMBRE         shift and go to state 62


state 21

    (25) returnvalores -> RETURN . termino END
    (26) returnvalores -> RETURN . creacionfunciones
    (36) termino -> . NUMBER
    (37) termino -> . ID
    (38) termino -> . DECIMAL
    (21) creacionfunciones -> . FUNCTION FNOMBRE LPAREN RPAREN LCORCHET declaracion RCORCHET

    NUMBER          shift and go to state 65
    ID              shift and go to state 66
    DECIMAL         shift and go to state 67
    FUNCTION        shift and go to state 20

    termino                        shift and go to state 63
    creacionfunciones              shift and go to state 64

state 22

    (27) returnvalores -> empty .

    CLOSE           reduce using rule 27 (returnvalores -> empty .)
    $end            reduce using rule 27 (returnvalores -> empty .)
    RCORCHET        reduce using rule 27 (returnvalores -> empty .)


state 23

    (84) print -> funcion_print . LPAREN argument RPAREN END

    LPAREN          shift and go to state 68


state 24

    (92) arreglos -> funcion_arreglo . LPAREN ID RPAREN

    LPAREN          shift and go to state 69


state 25

    (46) while -> WHILE . LPAREN comparacion RPAREN LCORCHET control_bucle RCORCHET

    LPAREN          shift and go to state 70


state 26

    (47) foreach -> FOREACH . LPAREN ID AS ID RPAREN LCORCHET control_bucle RCORCHET

    LPAREN          shift and go to state 71


state 27

    (121) clase -> CLASS . FNOMBRE LCORCHET declaracion RCORCHET

    FNOMBRE         shift and go to state 72


state 28

    (41) funcion_condicion -> IF .

    LPAREN          reduce using rule 41 (funcion_condicion -> IF .)


state 29

    (42) funcion_condicion -> ELSEIF .

    LPAREN          reduce using rule 42 (funcion_condicion -> ELSEIF .)


state 30

    (87) funcion_print -> VAR_EXPORT .

    LPAREN          reduce using rule 87 (funcion_print -> VAR_EXPORT .)


state 31

    (88) funcion_print -> ECHO .

    LPAREN          reduce using rule 88 (funcion_print -> ECHO .)


state 32

    (89) funcion_print -> PRINT .

    LPAREN          reduce using rule 89 (funcion_print -> PRINT .)


state 33

    (90) funcion_print -> PRINT_R .

    LPAREN          reduce using rule 90 (funcion_print -> PRINT_R .)


state 34

    (91) funcion_print -> VAR_DUMP .

    LPAREN          reduce using rule 91 (funcion_print -> VAR_DUMP .)


state 35

    (93) funcion_arreglo -> SUFFLE .

    LPAREN          reduce using rule 93 (funcion_arreglo -> SUFFLE .)


state 36

    (94) funcion_arreglo -> ARRAY_MERGE .

    LPAREN          reduce using rule 94 (funcion_arreglo -> ARRAY_MERGE .)


state 37

    (95) funcion_arreglo -> ARRAY_SEARCH .

    LPAREN          reduce using rule 95 (funcion_arreglo -> ARRAY_SEARCH .)


state 38

    (96) funcion_arreglo -> ARRAY_RAND .

    LPAREN          reduce using rule 96 (funcion_arreglo -> ARRAY_RAND .)


state 39

    (97) funcion_arreglo -> ARRAY_CHUNK .

    LPAREN          reduce using rule 97 (funcion_arreglo -> ARRAY_CHUNK .)


state 40

    (98) funcion_arreglo -> STR_SPLIT .

    LPAREN          reduce using rule 98 (funcion_arreglo -> STR_SPLIT .)


state 41

    (99) funcion_arreglo -> PREG_SPLIT .

    LPAREN          reduce using rule 99 (funcion_arreglo -> PREG_SPLIT .)


state 42

    (100) funcion_arreglo -> ARRAY_UNIQUE .

    LPAREN          reduce using rule 100 (funcion_arreglo -> ARRAY_UNIQUE .)


state 43

    (101) funcion_arreglo -> COUNT .

    LPAREN          reduce using rule 101 (funcion_arreglo -> COUNT .)


state 44

    (102) funcion_arreglo -> SIZEOF .

    LPAREN          reduce using rule 102 (funcion_arreglo -> SIZEOF .)


state 45

    (103) funcion_arreglo -> ARRAY_PUSH .

    LPAREN          reduce using rule 103 (funcion_arreglo -> ARRAY_PUSH .)


state 46

    (104) funcion_arreglo -> SORT .

    LPAREN          reduce using rule 104 (funcion_arreglo -> SORT .)


state 47

    (105) funcion_arreglo -> ASORT .

    LPAREN          reduce using rule 105 (funcion_arreglo -> ASORT .)


state 48

    (106) funcion_arreglo -> KSORT .

    LPAREN          reduce using rule 106 (funcion_arreglo -> KSORT .)


state 49

    (107) funcion_arreglo -> UNSET .

    LPAREN          reduce using rule 107 (funcion_arreglo -> UNSET .)


state 50

    (108) funcion_arreglo -> IMPLODE .

    LPAREN          reduce using rule 108 (funcion_arreglo -> IMPLODE .)


state 51

    (109) funcion_arreglo -> EXPLODE .

    LPAREN          reduce using rule 109 (funcion_arreglo -> EXPLODE .)


state 52

    (1) programa -> OPEN declaracion . CLOSE
    (2) programa -> OPEN declaracion .
    (20) declaracion -> declaracion .

  ! shift/reduce conflict for CLOSE resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 2 (programa -> OPEN declaracion .)
    CLOSE           shift and go to state 73
    $end            reduce using rule 2 (programa -> OPEN declaracion .)

  ! CLOSE           [ reduce using rule 20 (declaracion -> declaracion .) ]
  ! $end            [ reduce using rule 20 (declaracion -> declaracion .) ]


state 53

    (3) programa -> declaracion CLOSE .

    $end            reduce using rule 3 (programa -> declaracion CLOSE .)


state 54

    (40) expelse -> expif ELSE . LCORCHET declaracion RCORCHET

    LCORCHET        shift and go to state 74


state 55

    (28) expression -> ID EQUALS . operacion_matematica END
    (63) declararvariable -> ID EQUALS . tipo END
    (73) operador_object -> ID EQUALS . OBJECT_OPERATOR FNOMBRE LPAREN argumentos RPAREN END
    (29) operacion_matematica -> . termino operadores operacion_matematica
    (30) operacion_matematica -> . termino operadores termino
    (64) tipo -> . boolean
    (65) tipo -> . NUMBER
    (66) tipo -> . TEXT
    (67) tipo -> . NULL
    (68) tipo -> . archivos
    (69) tipo -> . array
    (70) tipo -> . new
    (36) termino -> . NUMBER
    (37) termino -> . ID
    (38) termino -> . DECIMAL
    (71) boolean -> . TRUE
    (72) boolean -> . FALSE
    (110) archivos -> . funcion_archivo LPAREN TEXT COMA TEXT RPAREN
    (74) array -> . ARRAY LPAREN valores_array RPAREN
    (83) new -> . NEW FNOMBRE
    (111) funcion_archivo -> . FGETS
    (112) funcion_archivo -> . FREAD
    (113) funcion_archivo -> . FSCANF
    (114) funcion_archivo -> . FPASSTHRU
    (115) funcion_archivo -> . FGETCSV
    (116) funcion_archivo -> . FGETC
    (117) funcion_archivo -> . FILE_GET_CONTENTS
    (118) funcion_archivo -> . READFILE
    (119) funcion_archivo -> . FILE
    (120) funcion_archivo -> . PARSE_INI_FILE

    OBJECT_OPERATOR shift and go to state 77
    NUMBER          shift and go to state 80
    TEXT            shift and go to state 81
    NULL            shift and go to state 82
    ID              shift and go to state 66
    DECIMAL         shift and go to state 67
    TRUE            shift and go to state 86
    FALSE           shift and go to state 87
    ARRAY           shift and go to state 89
    NEW             shift and go to state 90
    FGETS           shift and go to state 91
    FREAD           shift and go to state 92
    FSCANF          shift and go to state 93
    FPASSTHRU       shift and go to state 94
    FGETCSV         shift and go to state 95
    FGETC           shift and go to state 96
    FILE_GET_CONTENTS shift and go to state 97
    READFILE        shift and go to state 98
    FILE            shift and go to state 99
    PARSE_INI_FILE  shift and go to state 100

    operacion_matematica           shift and go to state 75
    tipo                           shift and go to state 76
    termino                        shift and go to state 78
    boolean                        shift and go to state 79
    archivos                       shift and go to state 83
    array                          shift and go to state 84
    new                            shift and go to state 85
    funcion_archivo                shift and go to state 88

state 56

    (58) expresionlogica -> ID operadorlogico . ID

    ID              shift and go to state 101


state 57

    (59) operadorlogico -> AND .

    ID              reduce using rule 59 (operadorlogico -> AND .)


state 58

    (60) operadorlogico -> OR .

    ID              reduce using rule 60 (operadorlogico -> OR .)


state 59

    (61) operadorlogico -> XOR .

    ID              reduce using rule 61 (operadorlogico -> XOR .)


state 60

    (62) operadorlogico -> NOT .

    ID              reduce using rule 62 (operadorlogico -> NOT .)


state 61

    (39) expif -> funcion_condicion LPAREN . comparacion RPAREN LCORCHET declaracion RCORCHET
    (48) comparacion -> . termino operadorcomparacion termino
    (36) termino -> . NUMBER
    (37) termino -> . ID
    (38) termino -> . DECIMAL
